--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,10 @@ project(landb)
 
 add_compile_options(-std=c++17)
 
-add_executable(landb main.cpp landb.cpp landb.cpp lanfile/file.cpp)
+add_library(landb STATIC  landb.cpp lanfile/file.cpp)
+
+add_executable(example main.cpp)
+
+target_link_libraries(example landb)
 
 install(TARGETS landb RUNTIME DESTINATION bin)
